--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css\Style.css">
+    <link rel="stylesheet" href=".\css\Style.css">
     <title>Pondera Book</title>
     <!-- SITE DOS ICONES -->
     <!-- https://www.flaticon.com/free-icon/magnifying-glass_126474#term=search&page=1&position=3 -->
