--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
             
                 <div class="logo cent_all">
                     <a href="#">
-                        <img src=".\img\PBook.png" alt="logo">
+                        <img src="./img/PBook.png" alt="logo">
                         
                     </a>
                 </div> 
