--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
 
             <!-- MELHOR CLASSIFICAÇÃO -->
             <div class="cont_Mclas cont_style">
-                <div class="cont_label" >melhor classificação</div>
+                <div class="cont_label" >Melhor classificação</div>
                 <!-- CARROCEL -->
                 <div class="carrocel">
                     <ul>
