--- a/html/pglivro.htm
+++ b/html/pglivro.htm
@@ -61,7 +61,7 @@
     <footer>
 
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="/js/pglivro.js"></script>
+    <script  defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script  defer src="/js/pglivro.js"></script>
 </body>
 </html>
